Add text to market's logo
The positioning of blocks for stores has been changed

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,13 @@
 #adress_box{
-    visibility: hidden;    
+  visibility: hidden;    
   }
+
+#markets > ul > li{
+  position: relative;
+}
+
+.market{
+  position: absolute;
+  top: 20px;
+}
 
